welcome.lessons.welcome.bat.bool1.MonkeyTrouble.scala.error
monkeyTrouble:8: error: type mismatch;
 found   : Unit
 required: Boolean
  if (aSmile == false || bSmile == true)
  ^